--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -32,19 +32,19 @@ knitr::opts_chunk$set(
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
 This thesis is about applied and methodological Bayesian statistics.
-It is Bayesian in the sense that I use probability models to draw conclusions from data.
+It is Bayesian in the sense that I use probability models to arrive at conclusions based on data.
 It is applied and methodological in the sense that I am concerned with real world questions and the means to answer them.
 
-The real world questions relate to surveillance of HIV in sub-Saharan Africa.
-Though important progress has been made, over forty years since the first reported cases millions of people remain impacted by HIV each year.
+The real world questions relate to surveillance of the HIV epidemic in sub-Saharan Africa.
+Though important progress has been made, millions of people are impacted by HIV each year.
 Quantifying the epidemic using statistics is an important part of the public health response, and the path towards disease control and elimination. 
 
-The data in this thesis are related to people.
-Usually, people answering survey questions or using healthcare facilities.
-Because the data have positions in space and time, statisticians describe it as spatio-temporal [@cressie2015statistics].
-While there is a great diversity of spatio-temporal data, there are important and distinctive commonalities which make their shared study worthwhile.
+The data in this thesis are related to people answering survey questions or using healthcare facilities.
+The data have particular positions in space and time which are important to take into account.
+Spatio-temporal data, while encompassing a great diversity, has important and distinctive commonalities which make its collective study worthwhile.
 
-Computation is an essential part of modern statistical practice, and each project chapter is accompanied by code, hosted on GitHub.
+Computation is an essential part of modern statistical practice.
+Each project chapter is accompanied by code, hosted on GitHub.
 
 ## Chapter overview
 
