--- a/03-beyond-borders.Rmd
+++ b/03-beyond-borders.Rmd
@@ -17,8 +17,12 @@ bibliography: references.bib
 \markboth{Models for spatial structure}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
+In this chapter, I describe an investigation of spatial random effects specifications.
+The motivated for this investigation was one of the fundamental questions encountered by an analyst during model construction.
+Namely, should the model be augmented to better capture a feature of the data generating process that we believe exists?
+The results are presented in @howes2023beyond.
+
 Code for the analysis in this chapter is available from [`athowes/beyond-borders`](https://github.com/athowes/beyond-borders) and supported by the R package [`arealutils`](https://athowes.github.io/arealutils).
-Include an edited version of the corresponding paper here.
 
 ## Background
 
