--- a/front-and-back-matter/98-appendices.Rmd
+++ b/front-and-back-matter/98-appendices.Rmd
@@ -4,5 +4,8 @@
 
 <!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
 
+# Spatial structure supplement
 
-# The First Appendix
+# A model for risk group proportions supplement
+
+# Fast approximate Bayesian inference supplement
