--- a/references.bib
+++ b/references.bib
@@ -685,3 +685,14 @@ URL= {https://www.r-inla.org/faq},
   year={2022},
   publisher={Public Library of Science San Francisco, CA USA}
 }
+
+@article{wood2020simplified,
+  title={{Simplified integrated nested Laplace approximation}},
+  author={Wood, Simon N},
+  journal={Biometrika},
+  volume={107},
+  number={1},
+  pages={223--230},
+  year={2020},
+  publisher={Oxford University Press}
+}
