--- a/templates/template.tex
+++ b/templates/template.tex
@@ -211,6 +211,8 @@ $endif$
 \newcommand{\bphi}{\bm{\phi}}
 \newcommand{\brho}{\bm{\rho}}
 \newcommand{\btheta}{\bm{\theta}}
+\newcommand{\bmeta}{\bm{\eta}}
+\newcommand{\bvartheta}{\bm{\vartheta}}
 
 \RequirePackage{bm}
 
