--- a/04-multi-agyw.Rmd
+++ b/04-multi-agyw.Rmd
@@ -32,7 +32,7 @@ In this chapter I describe an application of Bayesian spatio-temporal statistics
 This work was conducted in collaboration with colleagues from the MRC Centre for Global Infectious Disease Analysis and UNAIDS.
 My primary role was to develop the statistical model.
 I built on an earlier version of the analysis conducted by Kathryn Risher.
-The results are described in @howes2023spatio.
+The results are presented in @howes2023spatio.
 Kathryn has further created a spreadsheet tool using the resulting estimates which is now being used by countries to guide policy.
 Code for the analysis in this chapter is available from [`athowes/multi-agyw`](https://github.com/athowes/multi-agyw) and supported by the R package [`multi.utils`](https://athowes.github.io/multi.utils) [@multiutils].
 
