--- a/front-and-back-matter/abbreviations.tex
+++ b/front-and-back-matter/abbreviations.tex
@@ -12,27 +12,34 @@
 \begin{mclistof}{List of Abbreviations}{3.2cm}
 
 \item[HIV] Human Immunodeficiency Virus.
-\item[AIDS] Acquired Immune Deficiency Syndrome.
+\item[AIDS] Acquired ImmunoDeficiency Syndrome.
 \item[PEPFAR] President’s Emergency Plan for AIDS Relief.
 \item[HIV] Demographic and Health Surveys.
 \item[AIS] AIDS Indicator Survey.
-\item[MCMC] Markov Chain Monte Carlo.
-\item[INLA] Integrated Nested Laplace Approximation.
-\item[GP] Gaussian Process.
-\item[CAR] Conditionally Auto-regressive.
+\item[PrEP] Pre-Exposure Prophylaxis.
+\item[PEP] Post-Exposure Prophylaxis.
+\item[FSW] Female Sex Worker(s).
+\item[MSM] Men who have Sex with Men.
+\item[PWID] People Who Inject Drugs.
 \item[ANC] Antenatal Clinic.
-\item[ART] Antiretroviral Therapy.
 \item[UNAIDS] United Nations Joint Programme on HIV/AIDS.
 \item[CDC] Centers for Disease Control and Prevention.
 \item[UAT] Unlinked Anonymous Testing.
 \item[PMTCT] Prevention of Mother-to-Child Transmission.
 \item[PLHIV] People Living with HIV.
-\item[MPES] Multi-parameter Evidence Synthesis.
+
+\item[MCMC] Markov Chain Monte Carlo.
 \item[VI] Variational Inference.
+\item[INLA] Integrated Nested Laplace Approximation.
+\item[GP] Gaussian Process.
+\item[CAR] Conditionally Auto-regressive.
+\item[ART] Antiretroviral Therapy.
 \item[SAE] Small Area Estimation.
 \item[GMRF] Gaussian Markov Random Field.
 \item[HMC] Hamiltonian Monte Carlo.
-\item[PrEP] Pre-Exposure Prophylaxis
-\item[PEP] Post-Exposure Prophylaxis
+\item[GMRF] Gaussian Markov Random Field.
+\item[HMC] Hamiltonian Monte Carlo.
+\item[LGM] Latent Gaussian Model.
+\item[ELGM] Extended Latent Gaussian Model.
 
 \end{mclistof} 
